--- a/.github/workflows/ai-agent.yml
+++ b/.github/workflows/ai-agent.yml
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 0
       
       - name: 🐍 Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
@@ -48,8 +48,10 @@ jobs:
       
       - name: 📋 Upload logs
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: agent-logs
           path: logs/
+          if-no-files-found: ignore
           retention-days: 7
+
