--- a/.github/workflows/ai-agent.yml
+++ b/.github/workflows/ai-agent.yml
@@ -40,7 +40,7 @@ jobs:
       - name: 🤖 Run AI Agent
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_KEY }}
+          OPEN_AI_TOKEN: ${{ secrets.OPEN_AI_TOKEN }}
           REPO_NAME: ${{ github.repository }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
         run: |
